Integer Validator Added Form Tab return to Family / Person Form Mop up of Learning Groups Defaults added to sortBy in Pagination
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -68,3 +68,7 @@ services:
             entityManager: '@doctrine.orm.entity_manager'
         tags:
             - { name: validator.constraint_validator, alias: unique_or_blank_validator }
+    validator.integer.constraint:
+        class: Busybee\FormBundle\Validator\Constraints\IntegerValidator
+        tags:
+            - { name: validator.constraint_validator, alias: integer_validator }
