End of Day 10th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
@@ -14,8 +14,8 @@ Busybee\TimeTableBundle\Entity\Column:
         nameShort:
             type: string
             length: '8'
-        dayType:
-            type: boolean
+        mappingInfo:
+            length: '8'
         lastModified:
             type: datetime
         createdOn:
