--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Day.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Day.orm.yml
@@ -19,7 +19,7 @@ Busybee\TimeTableBundle\Entity\Day:
     manyToOne:
         timetable:
             targetEntity: Busybee\TimeTableBundle\Entity\TimeTable
-            inversedBy: columns
+            inversedBy: days
             joinColumn:
                 name: tt_id
                 referencedColumnName: id
