--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
@@ -46,3 +46,15 @@ department.staff.type.list:
             Manager: Manager
             Administrator: Administrator
             Other: Other
+date.format.long:
+    type: string
+    value: 'D, jS M/Y'
+    displayName: Date Format (Long)
+    description: Display the date in reports in this format. Formats are found at http://php.net/manual/en/function.date.php
+    role: ROLE_REGISTRAR
+date.format.short:
+      type: string
+      value: 'j/m/Y'
+      displayName: Date Format (Short)
+      description: Display the date in reports in this format. Formats are found at http://php.net/manual/en/function.date.php
+      role: ROLE_REGISTRAR
