--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -16,3 +16,6 @@ activity_group_test:
 timetable_day_assignment:
     path:     /day/assign/
     defaults: { _controller: BusybeeTimeTableBundle:Day:dayAssign }
+timetable_day_rotate_toggle:
+    path:     /day/{date}/{termName}/rotate/
+    defaults: { _controller: BusybeeTimeTableBundle:Day:rotateToggle }
