Timetable Constraints added for days and columns Form error now give success message by default.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
@@ -2,6 +2,15 @@ Busybee\TimeTableBundle\Entity\Column:
     type: entity
     table: tt_column
     repositoryClass: Busybee\TimeTableBundle\Repository\ColumnRepository
+    uniqueConstraints:
+        name_tt:
+            columns:
+                - name
+                - tt_id
+        nameshort_tt:
+            columns:
+                - nameShort
+                - tt_id
     id:
         id:
             type: integer
