--- a/src/Busybee/TimeTableBundle/Resources/config/validation/TimeTable.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/validation/TimeTable.yml
@@ -16,3 +16,7 @@ Busybee\TimeTableBundle\Entity\TimeTable:
             - NotBlank: ~
         nameShort:
             - NotBlank: ~
+        columns:
+            - Valid: ~
+        days:
+            - Valid: ~
