End of Day 18th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -72,3 +72,7 @@ services:
         class: Busybee\FormBundle\Validator\Constraints\IntegerValidator
         tags:
             - { name: validator.constraint_validator, alias: integer_validator }
+    validator.nowhitespace.constraint:
+        class: Busybee\FormBundle\Validator\Constraints\NoWhiteSpaceValidator
+        tags:
+            - { name: validator.constraint_validator, alias: nowhitespace_validator }
