--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
@@ -58,3 +58,49 @@ date.format.short:
       displayName: Date Format (Short)
       description: Display the date in reports in this format. Formats are found at http://php.net/manual/en/function.date.php
       role: ROLE_REGISTRAR
+timetable.day.periods:
+      type: array
+      value: |
+          Housekeeping:
+              start: '09:00'
+              end: '09:05'
+              abbr: HK
+          Period 1:
+              start: '09:05'
+              end: '09:50'
+              abbr: P1
+          Period 2:
+              start: '09:50'
+              end: '10:35'
+              abbr: P2
+          Morning Tea:
+              start: '10:35'
+              end: '10:50'
+              abbr: MT
+          Period 3:
+              start: '10:50'
+              end: '11:35'
+              abbr: P3
+          Period 4:
+              start: '11:35'
+              end: '12:20'
+              abbr: P4
+          Period 5:
+              start: '12:20'
+              end: '13:05'
+              abbr: P5
+          Lunch:
+              start: '13:05'
+              end: '13:50'
+              abbr: Lch
+          Period 6:
+              start: '13:50'
+              end: '14:35'
+              abbr: P5
+          Period 7:
+              start: '14:35'
+              end: '15:20'
+              abbr: P6
+      displayName: Timetable default period definition.
+      description: A default set of period times for days in the timetable.  These values are used to seed the timetable, which allows the timing to be changed if necessary.
+      role: ROLE_REGISTRAR
