Period Settings to Timetable
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
@@ -25,6 +25,10 @@ Busybee\TimeTableBundle\Entity\Column:
             length: '8'
         mappingInfo:
             length: '8'
+        start:
+            type: time
+        end:
+            type: time
         lastModified:
             type: datetime
         createdOn:
