--- a/src/Busybee/TimeTableBundle/Resources/config/validation/Column.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/validation/Column.yml
@@ -19,3 +19,4 @@ Busybee\TimeTableBundle\Entity\Column:
             - Busybee\FormBundle\Validator\NoWhiteSpace: ~
         periods:
             - Valid: ~
+            - Busybee\TimeTableBundle\Validator\Periods: ~
