Debug Time Value in Settings Set Periods Validator correctly.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
@@ -58,7 +58,7 @@ date.format.short:
       displayName: Date Format (Short)
       description: Display the date in reports in this format. Formats are found at http://php.net/manual/en/function.date.php
       role: ROLE_REGISTRAR
-timetable.day.periods:
+SchoolDay.Periods:
       type: array
       value: |
           Housekeeping:
