Lunch 22nd May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Column.orm.yml
@@ -11,6 +11,10 @@ Busybee\TimeTableBundle\Entity\Column:
             columns:
                 - nameShort
                 - tt_id
+        seq_tt:
+            columns:
+                - sequence
+                - tt_id
     id:
         id:
             type: integer
@@ -29,6 +33,9 @@ Busybee\TimeTableBundle\Entity\Column:
             type: time
         end:
             type: time
+        sequence:
+            type: integer
+            length: '3'
         lastModified:
             type: datetime
         createdOn:
