TimeTable Management and Validation
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -28,3 +28,6 @@ period_remove:
 column_remove:
     path:     /column/{id}/{currentSearch}/
     defaults: { _controller: BusybeeTimeTableBundle:Column:remove, currentSearch: null }
+column_resettimes:
+    path:     /column/reset/times/{id}/{currentSearch}/
+    defaults: { _controller: BusybeeTimeTableBundle:Column:resetTimes, currentSearch: null }
