--- a/src/Busybee/TimeTableBundle/Resources/config/validation/TimeTable.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/validation/TimeTable.yml
@@ -20,5 +20,6 @@ Busybee\TimeTableBundle\Entity\TimeTable:
             - Valid: ~
             - Count:
                 max: 50
+            - Busybee\TimeTableBundle\Validator\Columns: ~
         days:
             - Valid: ~
