Year Display.  Buttons now take message/options.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -144,12 +144,13 @@ services:
         class: Busybee\InstituteBundle\Form\DepartmentStaffType
         arguments:
             - '@doctrine.orm.entity_manager'
+            - '@setting.manager'
         tags:
             - { name: form.type }
     form.department.type:
         class: Busybee\InstituteBundle\Form\DepartmentType
         arguments:
-            - '@doctrine.orm.entity_manager'
+            - '@setting.manager'
         tags:
             - { name: form.type }
     grade.repository:
