--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
@@ -1,6 +1,6 @@
 Busybee\TimeTableBundle\Entity\TimeTable:
     type: entity
-    table: timetable
+    table: tt
     repositoryClass: Busybee\TimeTableBundle\Repository\TimeTableRepository
     uniqueConstraints:
         name_year:
