--- a/src/Busybee/TimeTableBundle/Resources/config/validation/Period.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/validation/Period.yml
@@ -12,3 +12,9 @@ Busybee\TimeTableBundle\Entity\Period:
         column:
             - Valid: ~
             - NotBlank: ~
+        name:
+            - NotBlank: ~
+        nameShort:
+            - NotBlank: ~
+            - Length:
+                max: 3
